--- a/project-three/src/index.html
+++ b/project-three/src/index.html
@@ -18,27 +18,23 @@
         <input type="text" name="price" id="result" class=" w-full text-gray-900 font-bold h-10 text-2xl">
       </div>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer delete">CE</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">H</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer clearAll">C</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">E</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">%</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">√</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">/</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">*</button>
+      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">/</button>
+      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">*</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">7</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">8</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">9</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">-</button>
+      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">-</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">4</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">5</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">6</button>
-      <button class="bg-gray-50 text-center rounded row-span-2 hover:bg-emerald-50 cursor-pointer btn-input btn-operation">+</button>
+      <button class="bg-gray-50 text-center rounded row-span-2 hover:bg-emerald-50 cursor-pointer btn-operation">+</button>
       <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-input">1</button>
       <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-input">2</button>
       <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-input">3</button>
       <button class="bg-gray-50 text-center rounded col-span-2 mb-3 hover:bg-emerald-50 cursor-pointer btn-input">0</button>
       <button class="bg-gray-50 text-center rounded mb-3 hover:bg-emerald-50 cursor-pointer btn-input">.</button>
-      <button class="bg-gray-50 text-center rounded row-span-2 mb-3 hover:bg-emerald-50 cursor-pointer btn-input equal btn-operation">=</button>
+      <button class="bg-gray-50 text-center rounded row-span-2 mb-3 hover:bg-emerald-50 cursor-pointer equal">=</button>
     </div>
   </div>
 
