--- a/project-three/src/index.html
+++ b/project-three/src/index.html
@@ -24,7 +24,7 @@
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">7</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">8</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">9</button>
-      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">-</button>
+      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation subs">-</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">4</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">5</button>
       <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">6</button>
