adding new styles

--- a/project-three/src/index.html
+++ b/project-three/src/index.html
@@ -10,31 +10,31 @@
 </head>
 
 <body>
-
-  <div class="flex items-center justify-center h-screen bg-emerald-50">
-    <div class="grid grid-cols-4 gap-4 bg-emerald-200 p-4 max-w-screen-sm w-full rounded">
-      <div class="col-span-4 bg-gray-50 h-48 rounded mb-4 p-4 relative z-10">
-        <input type="text" name="price" id="previous-number" class=" w-full text-gray-900 ">
-        <input type="text" name="price" id="result" class=" w-full text-gray-900 font-bold h-10 text-2xl">
+  <div class="flex items-center justify-center h-screen bg-gradient-to-r from-violet-200 to-fuchsia-200">
+    <div class="grid grid-cols-4 gap-4 bg-green-50 p-4 max-w-screen-sm  rounded w-96">
+      <div class="col-span-4 bg-gray-50 h-72 rounded mb-4 p-4 relative z-10 bg-green-50">
+        <input type="text" name="price" id="previous-number" class=" w-full text-neutral-500 bg-green-50 text-2xl ">
+        <input type="text" name="price" id="result" class=" w-full text-neutral-700 font-bold h-10 text-4xl bg-green-50">
       </div>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer delete">CE</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer clearAll">C</button>
-      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">/</button>
-      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation">*</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">7</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">8</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">9</button>
-      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-operation subs">-</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">4</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">5</button>
-      <button class="btn-input bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer">6</button>
-      <button class="bg-gray-50 text-center rounded row-span-2 hover:bg-emerald-50 cursor-pointer btn-operation">+</button>
-      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-input">1</button>
-      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-input">2</button>
-      <button class="bg-gray-50 text-center rounded hover:bg-emerald-50 cursor-pointer btn-input">3</button>
-      <button class="bg-gray-50 text-center rounded col-span-2 mb-3 hover:bg-emerald-50 cursor-pointer btn-input">0</button>
-      <button class="bg-gray-50 text-center rounded mb-3 hover:bg-emerald-50 cursor-pointer btn-input">.</button>
-      <button class="bg-gray-50 text-center rounded row-span-2 mb-3 hover:bg-emerald-50 cursor-pointer equal">=</button>
+      <button class="btn-input text-2xl bg-stone-300 text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer delete">CE</button>
+      <button class="btn-input text-2xl bg-stone-300  text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer clearAll">C</button>
+      <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-operation">/</button>
+      <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-operation">*</button>
+      <button class="btn-input text-2xl bg-stone-300 text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer">7</button>
+      <button class="btn-input text-2xl  bg-stone-300 text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer">8</button>
+      <button class="btn-input text-2xl bg-stone-300 text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer">9</button>
+      <button class="bg-stone-300  text-2xltext-center text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-operation subs">-</button>
+      <button class="btn-input text-2xl bg-stone-300 text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer">4</button>
+      <button class="btn-input text-2xl bg-stone-300 text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer">5</button>
+      <button class="btn-input text-2xl bg-stone-300 text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer">6</button>
+      <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-operation">+</button>
+      <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-input">1</button>
+      <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-input">2</button>
+      <button class="bg-stone-300 text-2xl text-center  text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-input">3</button>
+      <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded mb-3 hover:bg-stone-200 cursor-pointer row-span-2 bg-red-400 equal">=</button>
+      <button class="bg-stone-300 text-2xl  text-center text-neutral-700 rounded col-span-2 mb-3 hover:bg-stone-200 cursor-pointer btn-input">0</button>
+      <button class="bg-stone-300 text-2xl  text-center text-neutral-700 rounded mb-3 hover:bg-stone-200 cursor-pointer btn-input">.</button>
+      
     </div>
   </div>
 
