final version to presentation

--- a/project-three/src/index.html
+++ b/project-three/src/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div class="flex items-center justify-center h-screen bg-gradient-to-r from-violet-200 to-fuchsia-200">
-    <div class="grid grid-cols-4 gap-4 bg-green-50 p-4 max-w-screen-sm  rounded w-96">
-      <div class="col-span-4 bg-gray-50 h-72 rounded mb-4 p-4 relative z-10 bg-green-50">
-        <input type="text" name="price" id="previous-number" class=" w-full text-neutral-500 bg-green-50 text-2xl ">
-        <input type="text" name="price" id="result" class=" w-full text-neutral-700 font-bold h-10 text-4xl bg-green-50">
+    <div class="grid grid-cols-4 gap-4 bg-green-50 p-4 max-w-screen-sm  rounded w-96 ">
+      <div class="grid col-span-4 bg-gray-50 h-72 rounded mb-4 p-4 relative z-10 bg-green-50 items-end">
+        <input type="text" id="previous-number" class=" w-full text-neutral-500 bg-green-50 text-2xl text-end">
+        <input type="text" id="result" class="w-full text-neutral-700 font-bold h-10 text-4xl bg-green-50 text-end">
       </div>
       <button class="btn-input text-2xl bg-stone-300 text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer delete">CE</button>
       <button class="btn-input text-2xl bg-stone-300  text-neutral-700 text-center rounded hover:bg-stone-200 cursor-pointer clearAll">C</button>
