--- a/project-three/src/index.html
+++ b/project-three/src/index.html
@@ -31,7 +31,7 @@
       <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-input">1</button>
       <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-input">2</button>
       <button class="bg-stone-300 text-2xl text-center  text-neutral-700 rounded hover:bg-stone-200 cursor-pointer btn-input">3</button>
-      <button class="bg-stone-300 text-2xl text-center text-neutral-700 rounded mb-3 hover:bg-stone-200 cursor-pointer row-span-2 bg-red-400 equal">=</button>
+      <button class="bg-red-400 text-2xl text-center text-neutral-700 rounded mb-3 hover:bg-stone-200 cursor-pointer row-span-2 equal">=</button>
       <button class="bg-stone-300 text-2xl  text-center text-neutral-700 rounded col-span-2 mb-3 hover:bg-stone-200 cursor-pointer btn-input">0</button>
       <button class="bg-stone-300 text-2xl  text-center text-neutral-700 rounded mb-3 hover:bg-stone-200 cursor-pointer btn-input">.</button>
       
