--- a/coin-game/index.html
+++ b/coin-game/index.html
@@ -3,33 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
- <link rel="stylesheet" href="style.css">
+    <title>Coin Flip Game</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
     <main>
-<div>
-    <img src="./src/assets/img/head.png">
-</div>
-<div class="container">
-<div class="head-counter">
-    <h2>FACE</h2>
-    <h3 class="counter"></h3>
-</div>
-<div class="buttons">
-    <button>START</button>
-    <button>TURN COIN</button>
-</div>
-<div class="tail-counter">
-    <h2>CROWN</h2>
-    <h3 class="counter"></h3>
-</div>
-</div>
+        <div id="container-images">
+            <img id="head" src="./src/assets/img/head.png">
+            <img id="tail" src="./src/assets/img/tail.png">
+        </div>
+        <div class="container">
+            <div class="head-counter">
+                <h2>HEAD</h2>
+                <h3 id="head-counter" class="counter">0</h3>
+            </div>
+            <div class="buttons">
+                <button id="restart-btn">RESTART GAME</button>
+                <button id="turn-btn">TURN COIN</button>
+            </div>
+            <div class="tail-counter">
+                <h2>TAIL</h2>
+                <h3 id="tail-counter" class="counter">0</h3>
+            </div>
+        </div>
     </main>
-
-
-
     <script src="script.js"></script>
 </body>
 </html>
